# local-modern-datapipeline

./: .env.sample  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
dags/: dags.py  fastapi_delta_tasks.py  huggingface_utils.py
duckdb_pipeline/: .user.yml  dbt_project.yml  dbt_project_vars.yml  profiles.yml
duckdb_pipeline/macros/: delta_lake_setup.sql
duckdb_pipeline/models/: source.yml
duckdb_pipeline/models/marts/: mart_content_quality_metrics.sql  mart_data_quality_summary.sql  mart_delta_lake_processing_summary.sql  mart_japanese_content_summary.sql  schema.yml
duckdb_pipeline/models/staging/: schema.yml  stg_data_quality_checks.sql  stg_fineweb_japanese.sql  stg_wikipedia_japanese.sql
duckdb_pipeline/tests/: test_comprehensive_data_quality.sql  test_data_quality.sql  test_schema_validation.sql
scripts/: minio_setup.py
snowflake_analytics/: README.md  dbt_project.yml
snowflake_analytics/models/example/: profiles.yml⁠
spark/: Dockerfile
spark/scripts/: start-spark.sh
